# PICpp

./: LICENSE.txt  PIC++.sln  README.md
Adiabata/: Adiabata.cpp  Adiabata.vcxproj  Adiabata.vcxproj.filters  poisk_P2_R_tot.f90
Compton/: Compton.vcxproj  compare_compton.m  constants.h  main.cpp  plot_compton.m  plot_photons.m  plot_radio_and_compton.m  startparameters.h  util.cpp  util.h
DiffusionSolver/: DiffusionSolver.vcxproj  DiffusionSolver.vcxproj.filters  main.cpp  plot_distribution.m
FieldSolver1d/: FieldSolver1d.vcxproj  FieldSolver1d.vcxproj.filters  PIC++.vcxproj  ReadMe.txt  divergencecleanup.cpp  fields.cpp  main.cpp  matrixElement.h  output.h  simulation.cpp  specialmath.cpp  specialmath.h  util.cpp  vector3d.h
Fits/: CMakeLists.txt  main.cpp
Fourier/: Fourier.cpp  Fourier.vcxproj  complex.cpp  constants.h  fourier.h  main.cpp  output.cpp  output.h  simulation.cpp  simulation.h
LongTurbulence/: LongTurbulence.vcxproj  main.cpp  plot_average_spectrum.m
MatrixCompare/: MatrixCompare.cpp  main.cpp
OutputParser/: main.cpp
PIC++/: CMakeLists.txt  PIC++.vcxproj  PIC++.vcxproj.filters  boundaryFieldEvaluator.cpp  boundaryFieldEvaluator.h  complex.cpp  complex.h  constants.h  correlation.cpp  correlationMap.cpp  creating_arrays.cpp  creating_arrays.h  dichotomousSolver.cpp  dichotomousSolver.h  divergencecleanup.cpp  divergencecleanup_buneman.cpp  fields.cpp  fields_exchange.cpp  fields_filtering.cpp  fourier.cpp  fourier.h  initialization.cpp  initializeFluxFromRight.cpp  input.cpp  input.h  intHarris.cpp  largeVectorBasis.cpp  largeVectorBasis.h  main.cpp  massMatrix.cpp  massMatrix.h  matrix3d.cpp  matrix3d.h  matrixElement.h  matrixelement.cpp  memory_debug.h  memory_util.cpp  memory_util.h  momentum_collecting.cpp  momentum_exchange.cpp  (+25 more)
PIC++/distributions/: compare_distribution.m  compare_two_distribution.m
PIC++/distributions2/: compare_two_distribution.m
PIC++/output/: compare_distribution.m  compare_fields_line_x.m  plot_B_derivative.m  plot_E_derivative.m  plot_E_derivative_y.m  plot_E_derivative_z.m  plot_anisotropy.m  plot_average_yz_concentrations.m  plot_average_yz_fields.m  plot_concentrations.m  plot_concentrations_3d.m  plot_concentrations_3d_xz.m  plot_concentrations_3d_yz.m  plot_concentrations_line_x.m  plot_concentrations_line_y.m  plot_concentrations_line_z.m  plot_concentrations_section_xy.m  plot_concentrations_section_xz.m  plot_concentrations_seсtion_yz.m  plot_concentrations_y.m  plot_concentrations_z.m  plot_density.m  plot_distribution.m  plot_distribution_downstream.m  plot_distribution_grid.m  plot_distribution_grid_one.m  plot_distribution_sw.m  plot_divergence.m  plot_divergence_3d.m  plot_divergence_y.m  plot_energy.m  plot_fields.m  plot_fields_3d.m  plot_fields_3d_xz.m  plot_fields_3d_yz.m  plot_fields_animated.m  plot_fields_buneman_line_x.m  plot_fields_buneman_line_x_animated.m  plot_fields_buneman_line_y.m  plot_fields_buneman_line_z.m  (+63 more)
PIC++1d/: PIC++1d.vcxproj  PIC++1d.vcxproj.filters  constants.h  correlation.cpp  divergencecleanup.cpp  fields.cpp  (+18 more)
trunk/PIC++/: CMakeLists.txt  PIC++.vcxproj  PIC++.vcxproj.filters  constants.h  correlation.cpp  divergencecleanup.cpp  fields.cpp  initialization.cpp  input.cpp  input.h  matrixelement.cpp  mover.cpp  output.cpp  output.h  particle.cpp  particle.h  random.cpp  random.h  simulation.cpp  simulation.h  specialmath.cpp  specialmath.h  vector3d.cpp
trunk/PIC++/output/: plot_concentrations_3d.m  plot_density.m  plot_divergence.m  plot_fields.m  plot_fields_3d.m  plot_general.m  plot_traectory_electron.m  plot_velocity.m
(+351 files in other folders)
